--- a/Views/ScanPage.xaml
+++ b/Views/ScanPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:zxing="clr-namespace:ZXing.Net.Maui.Controls;assembly=ZXing.Net.MAUI.Controls"
              x:Class="HeyNeuer.Views.ScanPage"
-             Title="ScanPage">
+             Title="Bitte den QR Code scannen">
     <VerticalStackLayout>
         <zxing:CameraBarcodeReaderView
                 x:Name="cameraBarcodeReaderView"
